--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="with-device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie-edge">
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="css/index-head.css">
         <title>Cool kittles</title>
     </head>
     <body>
-        <h1>Here will be kittles</h1>
-
+        <head>
+            <h1>Here will be kittles</h1>
+            <img src="img/nice-cat.jpg" alt="Nice cat">
+        </head>
     </body>
 </html>
